Cart overlay and panel z-index fixing
Double check later

--- a/src/Components/Header/Cart/CartPanel/_cart-panel.scss
+++ b/src/Components/Header/Cart/CartPanel/_cart-panel.scss
@@ -2,7 +2,7 @@
 
 .cart-panel {
     position: fixed;
-    z-index: 2;
+    z-index: 11;
 
     width:100vw;
     height: 100vh;
@@ -14,7 +14,7 @@
 
     border: 1px solid variables.$black-100;
 
-    padding: 1em;
+    padding: 2em;
 
     transition: left 0.45s ease 0.15s;
 
@@ -32,7 +32,7 @@
         }
 
         .cart-panel__x {
-            font-size: 1em;
+            font-size: 1.5em;
             font-weight: 400;
         }
     }
@@ -59,5 +59,5 @@
 }
 
 .open {
-    left: 0;
+    left: -10px;
 }
